k3s/services/traefik/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.local.hejsan.xyz`)
      kind: Rule
    #  middlewares:
    #    - name: traefik-dashboard-basicauth
    #      namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-hejsan-xyz-tls
